Added extensive javadoc + small changes to checkstyle adherence in GameSelectionView